----------------------------------------------------------------------
Fri Jul 16 19:20:48 2004                        Michael Jennings (mej)

Working on cleaning some things up for portability and C99-compliance.
----------------------------------------------------------------------
Tue Jul 20 18:30:54 2004                        Michael Jennings (mej)

Tasty treats!
----------------------------------------------------------------------
Wed Jul 21 18:16:43 2004                        Michael Jennings (mej)

Mmmm, beefy.
----------------------------------------------------------------------
Wed Jul 21 22:48:14 2004                        Michael Jennings (mej)

More cleanups and fixed compile problems.
----------------------------------------------------------------------
Fri Jul 23 17:36:45 2004                        Michael Jennings (mej)

Finally we have strict C99 compliance.
----------------------------------------------------------------------
Thu Aug 19 17:23:32 2004                        Michael Jennings (mej)

Patch from Roland Illig <roland.illig@gmx.de> to fix m4 quoting.
----------------------------------------------------------------------
Fri Aug 20 18:50:46 2004                        Michael Jennings (mej)

Revert bad autogen.sh change.
----------------------------------------------------------------------
Tue Sep 14 11:45:40 2004                        Michael Jennings (mej)

Patch from Dirk Tilger <dirk@ostec.org> for 0.5 compatibility.
----------------------------------------------------------------------
Tue Oct 26 12:05:51 2004                        Michael Jennings (mej)

Upon return from spifopt_parse()'s postparsing run, argv[] will now
contain only the non-option arguments left on the command line.
----------------------------------------------------------------------
Tue Oct 26 12:18:14 2004                        Michael Jennings (mej)

Fix spec.
----------------------------------------------------------------------